--- a/public/home/index.html
+++ b/public/home/index.html
@@ -12,7 +12,7 @@
 
     <meta property="twitter:site" content="@example">
 
-<meta property="og:site_name" content="CS631 Final Project" />
+<meta property="og:site_name" content="Matthew Pomaville" />
 <meta property="og:locale" content="nn_NO" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/home/" />
@@ -29,7 +29,7 @@
 <title>
 
 
-     CS631 Final Project - Home 
+     Matthew Pomaville - Home 
 
 </title>
 <link rel="canonical" href="/home/">
@@ -1070,7 +1070,7 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
         <a href="/"><img class="logo" src="/img/Mouse_DNA_logo.png" alt="logo"></a>
         
         <div class="content">
-            <a href="/"><div class="name"><h1>CS631 Final Project</h1></div></a>
+            <a href="/"><div class="name"><h1>Matthew Pomaville</h1></div></a>
             <nav>
                 <ul>
                     
