--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
 
     <meta property="twitter:site" content="@example">
 
-<meta property="og:site_name" content="CS631 Final Project" />
+<meta property="og:site_name" content="Matthew Pomaville" />
 <meta property="og:locale" content="nn_NO" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/" />
-<meta property="og:title" content="CS631 Final Project" />
-<meta property="twitter:title" content="CS631 Final Project">
+<meta property="og:title" content="Matthew Pomaville" />
+<meta property="twitter:title" content="Matthew Pomaville">
 
     <meta property="og:image" content="/img/banner.png">
     <meta property="twitter:card" content="summary">
@@ -30,7 +30,7 @@
 <title>
 
 
-    CS631 Final Project
+    Matthew Pomaville
 
 </title>
 <link rel="canonical" href="/">
@@ -1057,7 +1057,7 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
 
 
 
-  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="CS631 Final Project" />
+  <link href="/index.xml" rel="alternate" type="application/rss+xml" title="Matthew Pomaville" />
 
 
 </head>
@@ -1073,7 +1073,7 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
         <a href="/"><img class="logo" src="/img/Mouse_DNA_logo.png" alt="logo"></a>
         
         <div class="content">
-            <a href="/"><div class="name"><h1>CS631 Final Project</h1></div></a>
+            <a href="/"><div class="name"><h1>Matthew Pomaville</h1></div></a>
             <nav>
                 <ul>
                     
