Added some homepage links and removed "project"

--- a/public/index.html
+++ b/public/index.html
@@ -1120,9 +1120,9 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
 
 <p>This website is currently a demo site for CS631, but will expand at a later point.</p>
 
-<p>[Here]() are some example graphs I created for CS631 along with descriptions of what they show</p>
+<p>[Here](&ldquo;<a href="https://mpomaville.netlify.com/blog/&quot;">https://mpomaville.netlify.com/blog/&quot;</a>) are some example graphs I created for CS631 along with descriptions of what they show</p>
 
-<p>[Here]() is my final project.</p>
+<p>[Here](&ldquo;<a href="https://mpomaville.netlify.com/projects/&quot;">https://mpomaville.netlify.com/projects/&quot;</a>) is my final project.</p>
 
                 </div>
             
