final presentation round 3

--- a/public/projects/final-presentation/index.html
+++ b/public/projects/final-presentation/index.html
@@ -1114,8 +1114,7 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
             <div class="markdown">
                 
     
-    <iframe src="https://mpomaville.netlify.com/slides/2018-06-18-final-presentation.Rmd" width="672" height="400px">
-</iframe>
+    <p>My final presentation is available <a href="&#39;https://mpomaville.netlify.com/slides/2018-06-18-final-presentation.html&#39;">here</a></p>
 
 
             </div>
