--- a/content/projects/2018-06-18-final-presentation.html
+++ b/content/projects/2018-06-18-final-presentation.html
@@ -13,4 +13,5 @@ meta_img: /images/image.jpg
 
 
 
-<p>My final presentation is available <a href="&#39;https://mpomaville.netlify.com/slides/2018-06-18-final-presentation.html&#39;">here</a></p>
+<iframe src="../../slides/2018-06-18-final-presentation.html" width="672" height="400px">
+</iframe>
