--- a/public/projects/final-presentation/index.html
+++ b/public/projects/final-presentation/index.html
@@ -1114,7 +1114,8 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
             <div class="markdown">
                 
     
-    <p>My final presentation is available <a href="&#39;https://mpomaville.netlify.com/slides/2018-06-18-final-presentation.html&#39;">here</a></p>
+    <iframe src="../../slides/2018-06-18-final-presentation.html" width="672" height="400px">
+</iframe>
 
 
             </div>
