--- a/content/projects/2018-06-18-final-presentation.html
+++ b/content/projects/2018-06-18-final-presentation.html
@@ -13,5 +13,6 @@ meta_img: /images/image.jpg
 
 
 
+<p>My Slides:</p>
 <iframe src="../../slides/2018-06-18-final-presentation.html" width="672" height="400px">
 </iframe>
