--- a/public/projects/final-presentation/index.html
+++ b/public/projects/final-presentation/index.html
@@ -1114,7 +1114,8 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
             <div class="markdown">
                 
     
-    <iframe src="../../slides/2018-06-18-final-presentation.html" width="672" height="400px">
+    <p>My Slides:</p>
+<iframe src="../../slides/2018-06-18-final-presentation.html" width="672" height="400px">
 </iframe>
 
 
