--- a/static/slides/2018-06-18-final-presentation.html
+++ b/static/slides/2018-06-18-final-presentation.html
@@ -56,7 +56,7 @@ It contains data on over 800 passengers from the Titanic, including data for fac
 class: center
 #The Graph
 
-![](/home/matt/Documents/Final_Proj_Website/titanic2.png)&lt;!-- --&gt;
+![](../../slides/titanic2.png)&lt;!-- --&gt;
 ---
 
 #Thanks!
